src/components/Home/Home.css
.home-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  height: 100%;
  user-select: none;
  margin-top: 20px;
}
.section-divider {
  height: auto;
  min-width: 50px;
  max-width: 30vw;
  max-height: 50px;
}
#section-one {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.about-section {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: flex-start;
  font-family: "Montserrat", sans-serif;
  font-size: 1.1rem;
  padding: 15px 0;
  white-space: normal;
  box-shadow: 0px 7px 10px -10px rgba(0, 0, 0, 0.5);
}
.profile-figure {
  text-align: center;
  width: 50%;
  min-width: 250px;
  max-width: 250px;
}
.about-summary {
  position: relative;
  font-size: 1.25rem;
  line-height: 1.3;
  background: mediumseagreen;
  color: white;
  -webkit-border-radius: 10px;
  border-radius: 10px;
  -webkit-box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
  box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
  padding: 15px;
}
.profile {
  height: 200px;
  border-radius: 50%;
}
.dev-name {
  font-size: 2rem;
  font-weight: 600;
}
.job-title {
  font-family: "Montserrat", sans-serif;
  font-size: 1.25rem;
  font-weight: 200;
  margin: 1rem 0;
}
.icon-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}
.skills-wrapper {
  display: flex;
  justify-content: center;
  width: 100%;
  background: rgba(0, 162, 255, 0.08);
}
.skills-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  width: 100%;
  max-width: 1200px;
}
.skills-header {
  font-family: "Montserrat", sans-serif;
  font-size: 1.5rem;
  font-weight: 200;
  padding: 0 0.5rem;
}
.figure-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: baseline;
  font-family: "Montserrat", sans-serif;
  font-weight: 200;
  font-size: 0.8rem;
  width: 100%;
}
.figure {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 113px;
  height: 75px;
  margin: 0;
  text-align: center;
}
.title-icon {
  margin: 0 0.25rem;
}
.linkedin {
  width: 40px;
  height: 40px;
  transition: 0.2s;
}
.github {
  width: 35px;
  height: 35px;
  transition: 0.2s;
}
.mongodb {
  width: 50px;
  height: 50px;
}
.agile {
  width: 40px;
  height: 40px;
  padding-bottom: 5px;
}
.linkedin:hover {
  fill: #0077b5;
}
.github:hover {
  fill: #bd2c00;
}
#section-two {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}
.section-two-header {
  font-size: 2rem;
}
.static-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}
.static-container {
  margin: 20px;
}
.static {
  height: 240px;
}
@media only screen and (max-width: 568px) {
  .about-section {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    max-width: 549px;
    margin-top: 200px;
  }
  .about-summary {
    position: relative;
    min-width: 270px;
    max-width: 270px;
    bottom: 550px;
    margin-bottom: -550px;
  }
  .speech-arrow {
    border-right: 21px solid transparent;
    border-top: 20px solid rgba(0, 0, 0, 0.2);
    bottom: -25px;
    position: absolute;
    right: 50px;
  }
  .speech-arrow::before {
    border-right: 27px solid transparent;
    border-top: 23px solid rgb(180, 180, 180);
    bottom: 2px;
    content: "";
    position: absolute;
    left: 2px;
  }
  .speech-arrow::after {
    border-right: 21px solid transparent;
    border-top: 21px solid mediumseagreen;
    bottom: 4px;
    content: "";
    position: absolute;
    left: 0;
  }
  .home-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .skills-container {
    width: 100%;
  }
  .profile-figure {
    margin: 0;
  }
  .header-container {
    border-top-right-radius: 25px;
    width: 100%;
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 2px 1px rgba(0, 0, 0, 0.4),
      0px 2px 1px rgba(0, 0, 0, 0.5), 0px 3px 1px rgba(0, 0, 0, 0.4);
  }
  .figure-container {
    border-bottom-left-radius: 0;
    width: 100%;
    max-width: 550px;
  }
}
@media only screen and (min-width: 569px) and (max-width: 1200px) {
  .about-section {
    max-width: 1200px;
  }
  .about-summary {
    max-width: 270px;
  }
  .profile-figure {
    margin: 100px 0 0 0;
  }
  .speech-arrow {
    border-right: 21px solid transparent;
    border-top: 20px solid rgba(0, 0, 0, 0.2);
    bottom: -25px;
    position: absolute;
    left: 5px;
  }
  .speech-arrow::before {
    border-right: 27px solid transparent;
    border-top: 23px solid rgb(180, 180, 180);
    bottom: 2px;
    content: "";
    position: absolute;
    left: 2px;
  }
  .speech-arrow::after {
    border-right: 21px solid transparent;
    border-top: 21px solid mediumseagreen;
    bottom: 4px;
    content: "";
    position: absolute;
    left: 0;
  }
  .skills-container {
    max-width: 650px;
  }
  .figure {
    width: 94px;
  }
}
@media only screen and (min-width: 1201px) {
  .about-summary {
    font-size: 1.5rem;
    width: 550px;
  }
  .profile-figure {
    margin: 50px 0 0 0;
  }
  .speech-arrow {
    border-right: 21px solid transparent;
    border-top: 20px solid rgba(0, 0, 0, 0.2);
    bottom: -25px;
    position: absolute;
    left: 5px;
  }
  .speech-arrow::before {
    border-right: 27px solid transparent;
    border-top: 23px solid rgb(180, 180, 180);
    bottom: 2px;
    content: "";
    position: absolute;
    left: 0px;
  }
  .speech-arrow::after {
    border-right: 21px solid transparent;
    border-top: 21px solid mediumseagreen;
    bottom: 4px;
    content: "";
    position: absolute;
    left: 0;
  }
  .skills-container {
    max-width: none;
  }
  .figure-container {
    display: flex;
    flex-wrap: nowrap;
  }
}

